--- a/Components/cart.html
+++ b/Components/cart.html
@@ -5,6 +5,7 @@
     <title>Shopping Cart</title>
     <link rel="stylesheet" href="../Css/index.css">
     <link rel="stylesheet" href="../Css/cart.css">
+    <link rel="stylesheet" href="../Css/menu.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&amp;display=swap" rel="stylesheet"/>
     <style>
