--- a/Components/menu.html
+++ b/Components/menu.html
@@ -63,9 +63,11 @@
         <span class="close-button" onclick="closeDetails()"><img src="../icon/close.png" style="height: 35px;width: 35px;"></span>
         <img id="productImage" src=" " alt="">
         <h2 id="productName"></h2>
-        <p id="price"></p>
+        <p id="desc"></p>
+        <h4 id="price"></h4>
         <button onclick="addToCart()">Add to Cart</button>
       </div>
+
 
     <script src="../Javascript/menu.js"></script>
     <script src="../Javascript/index.js"></script>
