--- a/Css/index.css
+++ b/Css/index.css
@@ -686,8 +686,8 @@ nav {
         width: 100%;
     }
     .card-details{
-        max-height: 300px;
-        width: 250px;
+        height: 300px;
+        width: 90%;
     }
     .card-details img{
         height: 60%;
