--- a/Components/index.html
+++ b/Components/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Responsive Navbar</title>
+    <title>Hotel Pangat</title>
     <link rel="stylesheet" href="../Css/index.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&amp;display=swap" rel="stylesheet"/>
@@ -20,8 +20,8 @@
         <ul class="nav-links">
             <li><a href="#">Home</a></li>
             <li><a href="menu.html">Menu</a></li>
-            <li><a href="#">Gallery</a></li>
-            <li><a href="#">Contact us</a></li>
+            <li><a href="gallery.html">Gallery</a></li>
+            <li><a href="contact.html">Contact us</a></li>
             <li><a href="#">Book Table</a></li>
         </ul>
         <div class="nav-list">
@@ -127,7 +127,7 @@
               <img alt="Grilled Salmon with lemon butter sauce" height="200" src="../Images/Chicken_tikka.jpg" width="300"/>
               <div class="content">
                <h3>Chicken Tikka</h3>
-               <p>Atlantic salmon with lemon butter </p>
+               <p>Atlantic salmon with lemon butter Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita incidunt dolor iure nam maxime laborum. </p>
                <h4 class="price">Rs.32.99</h4>
               </div>
              </div>
@@ -196,7 +196,7 @@
             <h2 id="productName"></h2>
             <p id="desc"></p>
             <h4 id="price"></h4>
-            <button onclick="addToCart()" onclick="closeDetails()">Add to Cart</button>
+            <button onclick="addToCart()" ondblclick="closeDetails()" >Add to Cart</button>
           </div>
 
         <div class="about">
@@ -219,7 +219,7 @@
 
     <script src="../Javascript/menu.js"></script>
     <script src="../Javascript/index.js"></script>
-    <script src="../Javascript/cart.js"></script>
+    <!-- <script src="../Javascript/cart.js"></script> -->
 
 </body>
 </html>
