--- a/Components/menu.html
+++ b/Components/menu.html
@@ -18,8 +18,8 @@
         <ul class="nav-links">
             <li><a href="index.html">Home</a></li>
             <li><a href="#">Menu</a></li>
-            <li><a href="#">Gallery</a></li>
-            <li><a href="#">Contact us</a></li>
+            <li><a href="gallery.html">Gallery</a></li>
+            <li><a href="contact.html">Contact us</a></li>
             <li><a href="#">Book Table</a></li>
         </ul>
         <div class="nav-list">
@@ -65,7 +65,8 @@
         <h2 id="productName"></h2>
         <p id="desc"></p>
         <h4 id="price"></h4>
-        <button onclick="addToCart()">Add to Cart</button>
+        <button onclick="addToCart()" ondblclick="closeDetails()">Add to Cart</button>
+    
       </div>
 
 
