--- a/Css/cart.css
+++ b/Css/cart.css
@@ -1,13 +1,39 @@
+#cartItems{
+    display: flex;
+    gap: 15px;
+}
+
 .cart-item {
     display: flex;
     align-items: center;
     margin-bottom: 20px;
 }
 .cart-item img {
-    height: 100px;
-    width: 100px;
-    margin-right: 20px;
+    width: 100%;
+    height: 70%;
 }
 .cart-item h3 {
     margin: 0;
+    margin-left: 10px;
+    font-size: 2rem;
+    color: white;
+
+}
+.cart-item p{
+    margin: 0;
+    margin-left: 10px;
+    font-size: 1.1rem;
+    color: white;
+}
+.cart-item h4{
+    margin: 0;
+    margin-left: 10px;
+    font-size: 1.2rem;
+    margin-bottom: 10px;
+    color: white; 
+}
+.car{
+    background-color: rgb(15, 15, 15);
+    width: 300px;
+    height: 280px;
 }
