--- a/Components/contact.html
+++ b/Components/contact.html
@@ -56,11 +56,11 @@
                     </div>
                 </div>
 
-                <div class="office-hours">
-                    <h3>Office Hours</h3>
-                    <p>Monday-Friday: 9:00 AM - 6:00 PM</p>
-                    <p>Saturday: 10:00 AM - 2:00 PM</p>
-                    <p>Sunday: Closed</p>
+                <div class="Opening-hours">
+                    <h3>Opening Hours</h3>
+                    <p>Monday-Saturday :</p> 
+                    <p>11:00 AM - 03:00 PM</p>
+                    <p>07:00 PM - 11:00 PM </p>
                 </div>
             </div>
 
