--- a/Components/contact.html
+++ b/Components/contact.html
@@ -6,6 +6,7 @@
     <title>Contact Us</title>
     <link rel="stylesheet" href="/Css/contact.css">
     <link rel="stylesheet" href="/Css/index.css">
+    <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
 </head>
 <body>
     <nav>
